test: align tests with rollback-on-boom and upsert contracts
- ConflictDetectionServiceTest: broadcastConflictBatch replaces per-conflict broadcast
- DashboardServiceTest: aggregateByPeriod replaces N findByPeriodId calls (BE#20)
- RoleServiceTest: stub audit-history + auth-context for grant/revoke (BE#12)
- ScheduleExchangeServiceTest: BUGFIX #6 — post-swap re-solve boom rolls back approve
- AutoGenConfigSaveTest: pin upsertConfig contract (PUT /auto-gen-config race fix)