@@ -135,7 +135,11 @@ class DashboardServiceTest {
     @DisplayName("getPeriodSummaries -> per-period schedule + staff count")
     void periodSummaries() {
         when(periodRepository.findAll()).thenReturn(List.of(period));
-        when(scheduleRepository.findByPeriodId(1)).thenReturn(List.of(schedule));
+        // BE#20: getPeriodSummaries now uses a single aggregateByPeriod() grouped
+        // query instead of N findByPeriodId calls. Row shape: [periodId, total, distinctStaff].
+        Object[] row = { 1, 1L, 1L };
+        java.util.List<Object[]> rows = java.util.Collections.singletonList(row);
+        when(scheduleRepository.aggregateByPeriod()).thenReturn(rows);
 
         var result = dashboardService.getPeriodSummaries();
 
